--- a/estilo.css
+++ b/estilo.css
@@ -1,20 +1,34 @@
 body{
    
-    background-color: rgba(6, 66, 163, 0.938);
+    background-color: black;
 }
 
 img{
-   
+    width: 20%;
+    display:inline-block;
+    vertical-align: middle;
+
     border-radius: 100%;
 }
 
 p{
-   
-    color: black;
-}
- h1, p{
     
+    color: white;
     text-align: center;
-    color: black;
+}
+ h1{
+    width: 60%;
+    display:inline-block;
+    vertical-align: middle;
+    text-align: center;
+    color: white;
     
  }
+ul, h3, footer{
+    color: white;
+}
+a{
+    color: blue;
+}
+
+ 
